<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text=""
    android:textSize="80dp"
    android:textAlignment="textEnd"
    android:textColor="@color/black"
    android:layout_above="@+id/buttons_layout"
    android:id="@+id/tv_results"
    />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:background="#A5B7D9"
        android:paddingVertical="40dp"
        android:id="@+id/buttons_layout" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:backgroundTint="#C8D6E9"
                android:layout_width="75dp"
                android:layout_height="75dp"
                app:cornerRadius="0dp"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_margin="3dp"
                android:id="@+id/button_backspace"
                android:text="DEL"
                />
            <com.google.android.material.button.MaterialButton
                android:backgroundTint="#C8D6E9"
                android:layout_width="75dp"
                android:layout_height="75dp"
                app:cornerRadius="0dp"
                android:textSize="32sp"
                android:textColor="@color/black"
                android:layout_margin="3dp"
                android:id="@+id/button_clear"
                android:text="C"
                />
            <com.google.android.material.button.MaterialButton
                android:backgroundTint="#C8D6E9"
                android:layout_width="75dp"
                android:layout_height="75dp"
                app:cornerRadius="0dp"
                android:textSize="32sp"
                android:textColor="@color/black"
                android:layout_margin="3dp"
                android:id="@+id/button_symbol"
                android:text="±"
                />
            <com.google.android.material.button.MaterialButton
                android:backgroundTint="#C8D6E9"
                android:layout_width="75dp"
                android:layout_height="75dp"
                app:cornerRadius="0dp"
                android:textSize="32sp"
                android:textColor="@color/black"
                android:layout_margin="3dp"

                android:text=""
                />
            <com.google.android.material.button.MaterialButton
                android:backgroundTint="#C8D6E9"
                android:layout_width="75dp"
                android:layout_height="75dp"
                app:cornerRadius="0dp"
                android:textSize="32sp"
                android:textColor="@color/black"
                android:layout_margin="3dp"

                android:text=""
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:backgroundTint="#C8D6E9"
                android:layout_width="75dp"
                android:layout_height="75dp"
                app:cornerRadius="0dp"
                android:textSize="32sp"
                android:textColor="@color/black"
                android:layout_margin="3dp"
                android:id="@+id/button_seven"
                android:text="@string/button_seven"
                />
            <com.google.android.material.button.MaterialButton
                android:backgroundTint="#C8D6E9"
                android:layout_width="75dp"
                android:layout_height="75dp"
                app:cornerRadius="0dp"
                android:textSize="32sp"
                android:textColor="@color/black"
                android:layout_margin="3dp"
                android:id="@+id/button_eight"
                android:text="@string/button_eight"
                />
            <com.google.android.material.button.MaterialButton
                android:backgroundTint="#C8D6E9"
                android:layout_width="75dp"
                android:layout_height="75dp"
                app:cornerRadius="0dp"
                android:textSize="32sp"
                android:textColor="@color/black"
                android:layout_margin="3dp"
                android:id="@+id/button_nine"
                android:text="@string/button_nine"
                />
            <com.google.android.material.button.MaterialButton
                android:backgroundTint="#C8D6E9"
                android:layout_width="75dp"
                android:layout_height="75dp"
                app:cornerRadius="0dp"
                android:textSize="32sp"
                android:textColor="@color/black"
                android:layout_margin="3dp"
                android:id="@+id/button_divide"
                android:text="@string/button_divide"
                />
            <com.google.android.material.button.MaterialButton
                android:backgroundTint="#C8D6E9"
                android:layout_width="75dp"
                android:layout_height="75dp"
                app:cornerRadius="0dp"
                android:textSize="32sp"
                android:textColor="@color/black"
                android:layout_margin="3dp"
                android:id="@+id/button_sqrt"
                android:text="@string/button_sqrt"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:backgroundTint="#C8D6E9"
                android:layout_width="75dp"
                android:layout_height="75dp"
                app:cornerRadius="0dp"
                android:textSize="32sp"
                android:textColor="@color/black"
                android:layout_margin="3dp"
                android:id="@+id/button_four"
                android:text="@string/button_four"
                />
            <com.google.android.material.button.MaterialButton
                android:backgroundTint="#C8D6E9"
                android:layout_width="75dp"
                android:layout_height="75dp"
                app:cornerRadius="0dp"
                android:textSize="32sp"
                android:textColor="@color/black"
                android:layout_margin="3dp"
                android:id="@+id/button_five"
                android:text="@string/button_five"
                />
            <com.google.android.material.button.MaterialButton
                android:backgroundTint="#C8D6E9"
                android:layout_width="75dp"
                android:layout_height="75dp"
                app:cornerRadius="0dp"
                android:textSize="32sp"
                android:textColor="@color/black"
                android:layout_margin="3dp"
                android:id="@+id/button_six"
                android:text="@string/button_six"
                />
            <com.google.android.material.button.MaterialButton
                android:backgroundTint="#C8D6E9"
                android:layout_width="75dp"
                android:layout_height="75dp"
                app:cornerRadius="0dp"
                android:textSize="32sp"
                android:textColor="@color/black"
                android:layout_margin="3dp"
                android:id="@+id/button_multiplication"
                android:text="@string/button_multiplication"
                />
            <com.google.android.material.button.MaterialButton
                android:backgroundTint="#C8D6E9"
                android:layout_width="75dp"
                android:layout_height="75dp"
                app:cornerRadius="0dp"
                android:textSize="32sp"
                android:textColor="@color/black"
                android:layout_margin="3dp"

                android:text=""
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:backgroundTint="#C8D6E9"
                android:layout_width="75dp"
                android:layout_height="75dp"
                app:cornerRadius="0dp"
                android:textSize="32sp"
                android:textColor="@color/black"
                android:layout_margin="3dp"
                android:id="@+id/button_one"
                android:text="@string/button_one"
                />
            <com.google.android.material.button.MaterialButton
                android:backgroundTint="#C8D6E9"
                android:layout_width="75dp"
                android:layout_height="75dp"
                app:cornerRadius="0dp"
                android:textSize="32sp"
                android:textColor="@color/black"
                android:layout_margin="3dp"
                android:id="@+id/button_two"
                android:text="@string/button_two"
                />
            <com.google.android.material.button.MaterialButton
                android:backgroundTint="#C8D6E9"
                android:layout_width="75dp"
                android:layout_height="75dp"
                app:cornerRadius="0dp"
                android:textSize="32sp"
                android:textColor="@color/black"
                android:layout_margin="3dp"
                android:id="@+id/button_three"
                android:text="@string/button_three"
                />
            <com.google.android.material.button.MaterialButton
                android:backgroundTint="#C8D6E9"
                android:layout_width="75dp"
                android:layout_height="75dp"
                app:cornerRadius="0dp"
                android:textSize="32sp"
                android:textColor="@color/black"
                android:layout_margin="3dp"
                android:id="@+id/button_minus"
                android:text="@string/button_minus"
                />
            <com.google.android.material.button.MaterialButton
                android:backgroundTint="#C8D6E9"
                android:layout_width="75dp"
                android:layout_height="75dp"
                app:cornerRadius="0dp"
                android:textSize="32sp"
                android:textColor="@color/black"
                android:layout_margin="3dp"

                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:backgroundTint="#C8D6E9"
                android:layout_width="235dp"
                android:layout_height="75dp"
                app:cornerRadius="0dp"
                android:textSize="32sp"
                android:textColor="@color/black"
                android:layout_margin="3dp"
                android:id="@+id/button_zero"
                android:text="@string/button_zero"
                />


            <com.google.android.material.button.MaterialButton
                android:backgroundTint="#C8D6E9"
                android:layout_width="75dp"
                android:layout_height="75dp"
                app:cornerRadius="0dp"
                android:textSize="32sp"
                android:textColor="@color/black"
                android:layout_margin="3dp"
                android:id="@+id/button_plus"
                android:text="@string/button_plus"
                />
            <com.google.android.material.button.MaterialButton
                android:backgroundTint="#C8D6E9"
                android:layout_width="75dp"
                android:layout_height="75dp"
                app:cornerRadius="0dp"
                android:textSize="32sp"
                android:textColor="@color/black"
                android:layout_margin="3dp"
                android:id="@+id/button_equals"
                android:text="@string/button_equals"
                />
        </LinearLayout>
        </LinearLayout>
</RelativeLayout>